# lightnet

./: .gitignore  CMakeLists.txt  README.md  cmds.sh
demoswxf/: matmul_profile_report.ncu-rep  prop.cu
demoswxf/matmul/: matmul.cu  matmul.h
demoswxf/reduce/: reduce.cu  reduce.h  reduce_profile_report.ncu-rep
demoswxf/reduceonce/: main  main.cu  reduce.cu  reduce.h
demoswxf/topk/: main  main.cu  topk.cu  topk.h  topk_profile_report.ncu-rep
demoswxf/transpose/: main  main.cu  transpose.cu  transpose.h  transpose_profile_report.ncu-rep
src/: CMakeLists.txt  cnpy.cu  compute_graph.cu  compute_graph.cuh  compute_graph_l1loss.cu  compute_graph_l1loss.cuh  kernel_bev_pool_v2.cuh  kernel_elementwise.cu  kernel_elementwise.cuh  kernel_geam.cuh  kernel_map.cu  kernel_map.cuh  kernel_matmul.cuh  kernel_others.cuh  kernel_reduce.cu  kernel_reduce.cuh  kernel_relu.cuh  kernel_transpose.cuh  kernels.cuh  network.cu  network.cuh  operator.cu  operator.cuh  operator_elementwise.cu  operator_elementwise.cuh  operator_map.cu  operator_map.cuh  operator_matmul.cu  operator_matmul.cuh  operator_reduce.cu  operator_reduce.cuh  operators.cuh  tensor.cu  tensor.cuh  tools_common.cu  tools_common.cuh  tools_cuda.cu  tools_cuda.cuh  tools_cudnn.cuh
tests/: CMakeLists.txt
tests/test_kernels/: CMakeLists.txt  main.cpp  test_bev_pool_v2.cu  test_geam.cu  test_matmul.cu  test_reduce.cu  test_transpose.c_u  test_transpose.cu  test_transpose.cuh
tests/test_network/: CMakeLists.txt  main.cpp  test_sample.cu
tests/test_tensor/: main.cpp  test_tensor.cu
